JumpScript/tests/baselines/reference/es6ImportDefaultBindingWithExport.errors.txt
tests/cases/compiler/client.jump(1,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.jump(3,1): error TS1191: An import declaration cannot have modifiers.


==== tests/cases/compiler/server.jump (0 errors) ====
    var a = 10;
    export default a;
    
==== tests/cases/compiler/client.jump (2 errors) ====
    export import defaultBinding from "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var x = defaultBinding;
    export import defaultBinding2 from "server"; // non referenced
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.